--- a/Strahovanie/public/css/style.css
+++ b/Strahovanie/public/css/style.css
@@ -352,6 +352,7 @@ body {
   line-height: 1.25;
   font-weight: 600;
   letter-spacing: 0.08em;
+  margin-bottom: 60px;
 }
 
 .navigation__link:hover {
@@ -360,6 +361,10 @@ body {
 
 .basement {
   padding-top: 45px;
+}
+
+.basement_mobile {
+  display: none;
 }
 
 .basement__list {
@@ -380,6 +385,7 @@ body {
   font-size: 14px;
   line-height: 1.7142857143;
   color: #001237;
+  opacity: 0.8;
 }
 
 .basement__contacts {
@@ -391,6 +397,10 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+}
+
+.basement__contacts_mobile {
+  display: none;
 }
 
 .basement__contact:not(:last-child) {
@@ -2090,4 +2100,88 @@ body {
   line-height: 1;
   color: #001237;
   margin-top: -2px;
+}
+
+@media screen and (max-width: 375px) {
+  .footer {
+    padding-top: 50px;
+    padding-bottom: 54px;
+  }
+
+  .footer__logotype {
+    margin-bottom: 44x;
+  }
+
+  .footer__logotype > img {
+    width: 185px;
+    height: 41px;
+  }
+
+  .footer__navigation {
+    margin-bottom: 44px;
+  }
+
+  .navigation__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+
+  .navigation__item:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 27px;
+  }
+
+  .navigation__link {
+    font-size: 14px;
+    line-height: 1.2142857143;
+  }
+
+  .basement {
+    display: none;
+  }
+
+  .basement_mobile {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    padding-top: 42px;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+
+  .basement__copyright {
+    margin-bottom: 23px;
+  }
+
+  .basement__contacts_mobile {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    margin-bottom: 44px;
+  }
+
+  .basement__contact:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 24px;
+  }
 }
