--- a/Strahovanie/src/sass/components/footer.scss
+++ b/Strahovanie/src/sass/components/footer.scss
@@ -3,19 +3,35 @@
   padding-top: 80px;
   padding-bottom: 50px;
 
+  @media screen and (max-width: 375px){
+    padding-top: 50px;
+    padding-bottom: 54px;
+  }
+
   &__wrapper {
     display: flex;
     flex-direction: column;    
     align-items: center;
     border-bottom: 1px solid $gray;
+    
   }
 
   &__logotype {
     margin-bottom: 60px;
+    @media screen and (max-width: 375px) {
+      >img{
+        width: 185px;
+        height: 41px;
+      }      
+      margin-bottom: 44x;
+    }
   }
 
   &__navigation {
     margin-bottom: 52px;
+    @media screen and (max-width: 375px) {
+      margin-bottom: 44px;
+    }
   }
 }
 
@@ -23,10 +39,18 @@
 
   &__list {
     display: flex;
+    @media screen and (max-width: 375px) {
+      flex-direction: column;
+      align-items: center;
+    }
   }
 
   &__item:not(:last-child) {
     margin-right: 34px;
+    @media screen and (max-width: 375px) {
+      margin-right: 0;
+      margin-bottom: 27px;
+    }
   }
 
   &__link {
@@ -36,14 +60,32 @@
     @include font(16px, 20px);
     font-weight: 600;
     letter-spacing: 0.08em;
+    margin-bottom: 60px;
     &:hover{
       border-bottom: 1px solid $blue-dark;
+    }
+
+    @media screen and (max-width: 375px) {
+      @include font(14px, 17px);
     }
   }
 }
 
 .basement {
   padding-top: 45px;
+  @media screen and (max-width: 375px) {
+    display: none;
+  }
+  &_mobile{
+    display: none;
+    @media screen and (max-width: 375px) {
+      display: flex;
+      flex-direction: column;
+      padding-top: 42px;
+      justify-content: center;
+      align-items: center;
+    }
+  }
 
   &__list {
     display: flex;
@@ -56,6 +98,10 @@
     font-family: $font-main;
     @include font(14px, 24px);
     color: $blue-dark;
+    opacity: 0.8;
+    @media screen and (max-width: 375px) {
+      margin-bottom: 23px;
+    }
   }
 
   &__contacts {
@@ -63,11 +109,24 @@
     margin-left: 105px;
     display: flex;
     align-items: center;
+    &_mobile{
+      display: none;
+      @media screen and (max-width: 375px) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 44px;
+      }
+    }
   }
 
   &__contact {
     &:not(:last-child){
       margin-right: 36px;
+      @media screen and (max-width: 375px) {
+        margin-right: 0;
+        margin-bottom: 24px;
+      }
     }
     
   }
